--- a/Frontend/MuktiRath/src/index.css
+++ b/Frontend/MuktiRath/src/index.css
@@ -31,6 +31,13 @@
   animation: fadeIn 2.5s ease-in-out forwards; /* Animation details */
 }
 
+.message{
+  opacity: 0;
+  transform: translateY(20px); 
+  animation: fadeIn 2.5s ease-in-out forwards; 
+  
+}
+
 @keyframes fadeIn {
   from {
     opacity: 0;
@@ -41,3 +48,4 @@
     transform: translateY(0);
   }
 }
+
